# SL_FastAPI_Docker_posgresql

./: Dockerfile  compose.yaml  pyproject.toml  requirements.txt
boot/: docker-run.sh
nbs/: test.ipynb
src/: main.py
src/api/events/: routing.py  schema.py
